Fix ellipsis overflow on writing page

--- a/mac-goodwin/_sass/showcases.scss
+++ b/mac-goodwin/_sass/showcases.scss
@@ -51,7 +51,7 @@
     min-width: 100px;
 }
 
-.writing-showcase .text p, .programming-showcase .text p, .blog-showcase .text p {
+.blog-showcase .text p {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
